fixed css files

--- a/index.html
+++ b/index.html
@@ -368,85 +368,89 @@
         </section>
 
 
-    </div>
-
-    <!-- section footer -->
-
+<!-- section footer -->
     <footer>
-        <div class="footer-container">
-            <div class="footer-column-1">
-                <div class="footer-title">SOLUTION</div>
-                <div class="footer-subtitle">Product</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">Proposals</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Contracts</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Time Tracking</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Expense Tracking</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Invoicing & Payments</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Recurring Payments</a></li>
-                </ul>
-                <div class="footer-subtitle">Templates</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Invoice</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
-                </ul>
-                <div class="footer-subtitle">Pricing</div>
+            <div class="footer-container">
+                <div class="footer-column-1">
+                    <div class="footer-title">SOLUTION</div>
+                    <div class="footer-subtitle">Product</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">Proposals</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Contracts</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Time Tracking</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Expense Tracking</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Invoicing & Payments</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Recurring Payments</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Templates</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Invoice</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Contract</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Pricing</div>
+                </div>
+    
+    
+                <div class="footer-column-2">
+                    <div class="footer-title">RESOURCES</div>
+                    <div class="footer-subtitle">Research</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance rates</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Best Freelance Tools</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Best Freelance Websites</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Insights</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Blog by Bonsai</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tips</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Others</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tax Calculator</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">PayPal Invoice Fee Calculator</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Stripe Fee Calculator</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tax Guide</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column-3">
+                    <div class="footer-title">BONSAI</div>
+                    <div class="footer-subtitle">Company</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">About Us</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">Careers</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Support</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><a class="footer-link" href="#">FAQ</a></li>
+                        <li class="footer-list-item"><a class="footer-link" href="#">EMAIL</a></li>
+                    </ul>
+                    <div class="footer-subtitle">Social</div>
+                    <ul class="footer-list">
+                        <li class="footer-list-item"><i class="fab fa-linkedin"></i><a class="footer-link" href="#">Linkedin</a>
+                        </li>
+                        <li class="footer-list-item"><i class="fab fa-twitter"></i><a class="footer-link" href="#">Twitter</a>
+                        </li>
+                    </ul>
+                    <div class="footer-subtitle">Affiliate Program</div>
+                    <div class="footer-subtitle">Write for us</div>
+                </div>
             </div>
+            <div class="links-list">
+                <div class="links">
+                    <p><a class="inline-link" href="#">Xero Vs. quickBooks Vs. Bonsai</a> &nbsp - &nbsp<a class="inline-link" href="#">FreshBooks Vs. QuickBooks Vs. Bonsai</a> &nbsp - &nbsp <a class="inline-link" href="#">Wave Vs. QuickBooks Vs. Bonsai</a> &nbsp - &nbsp<a class="inline-link" href="#">QuickBooks Alternative</a> &nbsp - &nbsp<a class="inline-link" href="#">Freelance
+                    Hiring Toolkits</a> &nbsp - &nbsp<a class="inline-link" href="#">Gig List</a></p>
+                </div>
+            </div>
+        </footer>
+    </div>    <!-- container -->
 
 
-            <div class="footer-column-2">
-                <div class="footer-title">RESOURCES</div>
-                <div class="footer-subtitle">Research</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance rates</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Best Freelance Tools</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Best Freelance Websites</a></li>
-                </ul>
-                <div class="footer-subtitle">Insights</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Blog by Bonsai</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tips</a></li>
-                </ul>
-                <div class="footer-subtitle">Others</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tax Calculator</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">PayPal Invoice Fee Calculator</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Stripe Fee Calculator</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Freelance Tax Guide</a></li>
-                </ul>
-            </div>
-            <div class="footer-column-3">
-                <div class="footer-title">BONSAI</div>
-                <div class="footer-subtitle">Company</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">About Us</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">Careers</a></li>
-                </ul>
-                <div class="footer-subtitle">Support</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><a class="footer-link" href="#">FAQ</a></li>
-                    <li class="footer-list-item"><a class="footer-link" href="#">EMAIL</a></li>
-                </ul>
-                <div class="footer-subtitle">Social</div>
-                <ul class="footer-list">
-                    <li class="footer-list-item"><i class="fab fa-linkedin"></i><a class="footer-link" href="#">Linkedin</a>
-                    </li>
-                    <li class="footer-list-item"><i class="fab fa-twitter"></i><a class="footer-link" href="#">Twitter</a>
-                    </li>
-                </ul>
-                <div class="footer-subtitle">Affiliate Program</div>
-                <div class="footer-subtitle">Write for us</div>
-            </div>
-        </div>
-        <div class="links-list">
-            <div class="links">
-                <p><a class="inline-link" href="#">Xero Vs. quickBooks Vs. Bonsai</a> &nbsp - &nbsp<a class="inline-link" href="#">FreshBooks Vs. QuickBooks Vs. Bonsai</a> &nbsp - &nbsp <a class="inline-link" href="#">Wave Vs. QuickBooks Vs. Bonsai</a> &nbsp - &nbsp<a class="inline-link" href="#">QuickBooks Alternative</a> &nbsp - &nbsp<a class="inline-link" href="#">Freelance
-                Hiring Toolkits</a> &nbsp - &nbsp<a class="inline-link" href="#">Gig List</a></p>
-            </div>
-        </div>
-    </footer>
+
+
+
+
     <script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
