--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <!--   ****** ZOEY ****  -->
     <!-- section 2 -->
+<div class="section-white">
     <section class="section-2">
         <div class="section-2-part1">
             <div class="section-2-part1__items">
@@ -134,6 +135,7 @@
             <a href="#home" class="button button--hover">START FREE</a>
         </div>
     </section>
+</div>
     <!--   ****** ZOEY ****  -->
     <!-- section 3 -->
     <div class="section-grey">
@@ -166,6 +168,7 @@
 </div>
     <!--   ****** ZOEY ****  -->
     <!-- section 4 -->
+    <div class="section-white">
         <section class="section-4">
             <header class="section-4-header">
                 <h1 class="section-4-header__title">Explore Bonsai.</h1>
@@ -248,6 +251,7 @@
             </div>
             <a href="#home" class="section-4__button button button--hover">START FREE</a>
         </section>
+    </div>
        <!--   ****** ZOEY ****  -->
         <!-- section 5 -->
         <div class="section-grey">
@@ -278,97 +282,97 @@
         </div>
         <!--   ****** ZOEY ****  -->
         <!--section 6  -->
-        <section class="section-6">
-            <div class="section-6-part1">
-                <h1 class="section-6-part1__title">Empowering 40,000 freelancers from all backgrounds.</h1>
-                <p>Bonsai supports every type of freelance work.We've built Bonsai to fit every workflow so everyone feels protected.
-                </p>
-                <p>Bonsai helps every freelancer put their work on autopilot. </p>
-                <a href="#home" class="section-6__button button button--hover">START FREE</a>
-            </div>
-            <div class="section-6-part2">
-                <ul>
-                    <li><img src="assets/img/asset 17.png" width="45"><span> Designers</span></li>
-                    <li><img src="assets/img/asset 18.png" width="45"><span> Developers</span></li>
-                    <li><img src="assets/img/asset 19.png" width="45"><span> Writers</span></li>
-                    <li><img src="assets/img/asset 20.png" width="45"><span> Photographers</span></li>
-                    <li><img src="assets/img/asset 21.png" width="45"><span> Videographers</span></li>
-                    <li><img src="assets/img/asset 22.png" width="45"><span> Consultants</span></li>
-                </ul>
-            </div>
-        </section>
+        <div class="section-white">
+            <section class="section-6">
+                <div class="section-6-part1">
+                    <h1 class="section-6-part1__title">Empowering 40,000 freelancers from all backgrounds.</h1>
+                    <p>Bonsai supports every type of freelance work.We've built Bonsai to fit every workflow so everyone feels protected.
+                    </p>
+                    <p>Bonsai helps every freelancer put their work on autopilot. </p>
+                    <a href="#home" class="section-6__button button button--hover">START FREE</a>
+                </div>
+                <div class="section-6-part2">
+                    <ul>
+                        <li><img src="assets/img/asset 17.png" width="45"><span> Designers</span></li>
+                        <li><img src="assets/img/asset 18.png" width="45"><span> Developers</span></li>
+                        <li><img src="assets/img/asset 19.png" width="45"><span> Writers</span></li>
+                        <li><img src="assets/img/asset 20.png" width="45"><span> Photographers</span></li>
+                        <li><img src="assets/img/asset 21.png" width="45"><span> Videographers</span></li>
+                        <li><img src="assets/img/asset 22.png" width="45"><span> Consultants</span></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
 
         <!-- section 7 -->
-        <section class="section-7">
-            <h1 class="section-7-title">40,000 freelancers trust Bonsai.</h1>
-            <div class="section-7-part1 text">
-                <div class="card">
-                    <h3>Great teplated contract</h3>
-                    <p>"For all my Freelancer / Small Agency followers, I wish I'd dicoverd @bonsaiinc long ago - great templated contract"</p>
-                    <div class ="line"></div>
-                    <div class="person">
-                        <img class="foto" src="assets/img/asset%2023.jpeg" width="70">
-                        <div class="description">
-                            <p class="name"> David Mihm</p>
-                            <div class="title-person">Founder of tidingsCo</div>
+        <div class="section-grey">
+            <section class="testimonials">
+                <h1>40,000 freelancers trust Bonsai.</h1>
+                    <div class="card shadow">
+                        <div class="card-text">
+                            <h3>Great teplated contract</h3>
+                            <p>"For all my Freelancer / Small Agency followers, I wish I'd dicoverd @bonsaiinc long ago - great templated contract"</p>
+                        </div>
+                        <div class="card-person">
+                            <img class="card-person__photo" src="assets/img/asset%2023.jpeg" width="70">
+                            <div class="card-person__text">
+                                <span class="card-person__name"> David Mihm</span>
+                                <span class="card-person__profession">Founder of tidingsCo</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="card">
-                    <h3>My all time favorite freelance tool</h3>
-                    <p>"@bonsaiinc is probably my all time favorite freelance tool. hands down. the team is super responsive and accessible when i have questions."</p>
-                    <div class ="line"></div>
-                    <div class="person">
-                        <img class="foto" src="assets/img/asset%2024.jpeg" width="70">
-                        <div class="description">
-                            <p class="name"> David Urbinati</p>
-                            <div class="title-person">Motion design / animation</div>
+                    <div class="card shadow">
+                        <div class="card-text">
+                            <h3>My all time favorite freelance tool</h3>
+                            <p>"@bonsaiinc is probably my all time favorite freelance tool. hands down. the team is super responsive and accessible when i have questions."</p>
+                        </div>
+                        <div class="card-person">
+                            <img class="card-person__photo" src="assets/img/asset%2024.jpeg" width="70">
+                            <div class="card-person__text">
+                                <span class="card-person__name"> David Urbinati</span>
+                                <span class="card-person__profession">Motion design / animation</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="section-7-part2 text">
-                <div class="card">
-                    <h3>Amazing and saves boatloads of time</h3>
-                    <p>"Anyone doing #freelance work should use @bonsaiinc  for contracts/payment. It's amazing and saves boatloads of time."</p>
-                    <div class ="line"></div>
-                    <div class="person">
-                        <img class="foto" src="assets/img/asset%2025.jpeg" width="70">
-                        <div class="description">
-                            <p class="name"> Nathanael Smith</p>
-                            <div class="title-person">product designer</div>
+                    <div class="card shadow">
+                        <div class="card-text">
+                            <h3>Amazing and saves boatloads of time</h3>
+                            <p>"Anyone doing #freelance work should use @bonsaiinc  for contracts/payment. It's amazing and saves boatloads of time."</p>
+                        </div>
+                        <div class="card-person">
+                            <img class="card-person__photo" src="assets/img/asset%2025.jpeg" width="70">
+                            <div class="card-person__text">
+                                <spanp class="card-person__name"> Nathanael Smith</spanp>
+                                <span class="card-person__profession">Product design</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="card">
-                    <h3>Really lovely experience</h3>
-                    <p>"Wow, @bonsaiinc's contracts are completely wonderful. If you freelance you have to check it out. Really lovely experience. h/t @hemeon"</p>
-                    <div class ="line"></div>
-                    <div class="person">
-                        <img class="foto" src="assets/img/asset%2026.jpeg" width="70">
-                        <div class="description">
-                            <p class="name"> Jon Gold</p>
-                            <div class="title-person">Designer and engineer</div>
+                    
+                    <div class="card shadow">
+                        <div class="card-text">
+                            <h3>Really lovely experience</h3>
+                            <p>"Wow, @bonsaiinc's contracts are completely wonderful. If you freelance you have to check it out. Really lovely experience. h/t @hemeon"</p>
+                        </div>
+                        <div class="card-person">
+                            <img class="card-person__photo" src="assets/img/asset%2026.jpeg" width="70">
+                            <div class="card-person__text">
+                                <span class="card-person__name"> Jon Gold</span>
+                                <span class="card-person__profession">Designer and engineer</span>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-
-        </section>
-
-        <!-- section 9 -->
-
-        <section class="section-8">
-            <h1 class="section-6-part1__title">Try Bonsai now and love it forever.</h1>
-            <p>Get started for free.</p>
-            <a href="#home" class="section-8__button">START FREE</a>
-        </section>
-
-
-<!-- section footer -->
+    </section>
+        </div>
+        
+        <!-- section 8 -->
+        <div class="section-white">
+            <section class="call-to-action">
+                <h1 class="call-to-action__title">Try Bonsai now and love it forever.</h1>
+                <p class="call-to-action__subtitle">Get started for free.</p>
+                <a href="#home" class="button button--hover">START FREE</a>
+            </section>
+        </div>        
+        <!-- section footer -->
     <footer>
             <div class="footer-container">
                 <div class="footer-column-1">
