--- a/home.html
+++ b/home.html
@@ -200,7 +200,6 @@
                         <h1>Send proffesional proposals and close more deals.</h1>
                         <p>Structure your next proposal in a few clicks and generate a clear estimates that you will help you close your next deal.</p>
                         <p><a href="#"> Learn about proposals <i class="fas fa-chevron-right"> </i></a></p>
-
                     </div>
                 </div>
                 <div id="tabs-2" class="tab-content">
@@ -264,15 +263,15 @@
                 <div class="section-5-main">
                     <div>
                         <div class="section-5-main__item">
-                            <div class="section-5-main__moving"><img src="assets/img/asset 14.png"></div>
+                            <div class="section-5-main__moving section-5-main__moving-1"><img src="assets/img/asset 14.png"></div>
                             <p>international contracts</p>
                         </div>
                         <div class="section-5-main__item">
-                            <div class="section-5-main__moving"><img src="assets/img/asset 15.png"></div>
+                            <div class="section-5-main__moving section-5-main__moving-2"><img src="assets/img/asset 15.png"></div>
                             <p>180 currencies</p>
                         </div>
                         <div class="section-5-main__item">
-                            <div class="section-5-main__moving"><img src="assets/img/asset 16.png"></div>
+                            <div class="section-5-main__moving section-5-main__moving-3"><img src="assets/img/asset 16.png"></div>
                             <p>Global payments</p>
                         </div>
                     </div>
@@ -289,7 +288,7 @@
                     <p>Bonsai supports every type of freelance work.We've built Bonsai to fit every workflow so everyone feels protected.
                     </p>
                     <p>Bonsai helps every freelancer put their work on autopilot. </p>
-                    <a href="#home" class="section-6__button button button--hover">START FREE</a>
+                    <a href="#home" class=" button button--hover">START FREE</a>
                 </div>
                 <div class="section-6-part2">
                     <ul>
