--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
                         <a class="button" href="#home">start free</a>
                     </li>
                 </ul>
-                <a href="" class="header__icon-bar">
+                <a href="" class="dropbtn header__icon-bar">
                     <span></span>
                     <span></span>
                     <span></span>
